# proxy-playground

./: Cargo.toml  README.md  cluster-create.sh  delete-cluster.sh  proxy-deploy.sh
k8s/: requests.yaml  server.yaml
proxy-client/: Cargo.toml
proxy-client/src/: main.rs
proxy-server/: Cargo.toml
proxy-server/src/: main.rs
self-signed-certs/: ca.crt  ca.key  server.crt  server.pem
