[package]
name = "proxy-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-rustls = "0.23"
rustls = "0.20"
rustls-pemfile = {version = "2.2.0", features = ["std"]}
x509-parser = { version = "0.15.1", features = ["verify"] }
openssl = {version = "0.10.66", features = ["vendored"]}
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
clap = { version = "4.0", features = ["derive"] }
